# AutoDrive-Edge-Cloud-System

./: .gitignore
AutoDrive_Framework/: .gitignore  CMakeLists.txt  config.yaml
AutoDrive_Framework/include/: DistanceEstimator.h  MultiTracker.h  PubSub.h  Tracker.h  YoloDetector.h
AutoDrive_Framework/src/: DistanceEstimator.cpp  MultiTracker.cpp  Tracker.cpp  YoloDetector.cpp  main_video.cpp
traffic_cloud/: manage.py
traffic_cloud/perception/: apps.py  views.py
traffic_cloud/perception/templates/: monitor.html
traffic_cloud/traffic_cloud/: asgi.py  settings.py  urls.py  wsgi.py
